k8s/sitescope/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sitescope
  labels:
    app.kubernetes.io/managed-by: github-actions
